--- a/Ornet.html
+++ b/Ornet.html
@@ -21,7 +21,7 @@
         <img src="logo.png" alt="logo" />
       </a>
       <nav class="navbar">
-        <a href="#">Home</a>
+        <a href="#" class="active">Home</a>
         <a href="#">About</a>
         <a href="#">Menu</a>
         <a href="#">Products</a>
@@ -41,5 +41,26 @@
         </button>
       </div>
     </header>
+    <section class="home">
+      <div class="content">
+        <h3>EXPRESS HOME DELIVERY</h3>
+        <p>
+          **PLEASE READ BELOW IMPORTANT** All times for when booking a session
+          are shown in MST(Mountain Standard Time). All sessions are live so you
+          must be present in the class when you booked it. Please keep this in
+          mind when making your booking!
+        </p>
+        <a href="#" class="btn">Order Now</a>
+      </div>
+    </section>
+    <section class="menu">
+      <h1>Our <span>Menu</span></h1>
+      <div class="box-container">
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+        <div class="box"></div>
+      </div>
+    </section>
   </body>
 </html>
