--- a/Ornet.html
+++ b/Ornet.html
@@ -18,7 +18,7 @@
   <body>
     <header class="header">
       <a href="#" class="logo">
-        <img src="logo.png" alt="logo" />
+        <img src="images/logo.png" alt="logo" />
       </a>
       <nav class="navbar">
         <a href="#" class="active">Home</a>
@@ -56,10 +56,53 @@
     <section class="menu">
       <h1>Our <span>Menu</span></h1>
       <div class="box-container">
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
-        <div class="box"></div>
+        <div class="box">
+          <div class="box-head">
+            <img src="images/menu-1.png" alt="menu" />
+            <span class="menu-category">PIZZA</span>
+            <h3>6 Mini Pizzas</h3>
+            <div class="price">$104.99 <span>$129.99</span></div>
+          </div>
+          <box class="box-bottom">
+            <a href="" class="btn">Add To Cart</a>
+          </box>
+        </div>
+
+        <div class="box">
+          <div class="box-head">
+            <img src="images/menu-2.png" alt="menu" />
+            <span class="menu-category">PIZZA</span>
+            <h3>6 Mini Pizzas</h3>
+            <div class="price">$104.99 <span>$129.99</span></div>
+          </div>
+          <box class="box-bottom">
+            <a href="" class="btn">Add To Cart</a>
+          </box>
+        </div>
+
+        <div class="box">
+          <div class="box-head">
+            <img src="images/menu-3.png" alt="menu" />
+            <span class="menu-category">PIZZA</span>
+            <h3>6 Mini Pizzas</h3>
+            <div class="price">$104.99 <span>$129.99</span></div>
+          </div>
+          <box class="box-bottom">
+            <a href="" class="btn">Add To Cart</a>
+          </box>
+        </div>
+
+        <div class="box">
+          <div class="box-head">
+            <img src="images/menu-4.png" alt="menu" />
+            <span class="menu-category">PIZZA</span>
+            <h3>6 Mini Pizzas</h3>
+            <div class="price">$104.99 <span>$129.99</span></div>
+          </div>
+          <box class="box-bottom">
+            <a href="" class="btn">Add To Cart</a>
+          </box>
+        </div>
       </div>
     </section>
   </body>
