--- a/Ornet.html
+++ b/Ornet.html
@@ -53,8 +53,9 @@
         <a href="#" class="btn">Order Now</a>
       </div>
     </section>
+
     <section class="menu">
-      <h1>Our <span>Menu</span></h1>
+      <h1 class="heading">Our <span>Menu</span></h1>
       <div class="box-container">
         <div class="box">
           <div class="box-head">
@@ -71,9 +72,9 @@
         <div class="box">
           <div class="box-head">
             <img src="images/menu-2.png" alt="menu" />
-            <span class="menu-category">PIZZA</span>
-            <h3>6 Mini Pizzas</h3>
-            <div class="price">$104.99 <span>$129.99</span></div>
+            <span class="menu-category">Burger</span>
+            <h3>5 Mini Burger</h3>
+            <div class="price">$204.99 <span>$329.99</span></div>
           </div>
           <box class="box-bottom">
             <a href="" class="btn">Add To Cart</a>
@@ -84,8 +85,8 @@
           <div class="box-head">
             <img src="images/menu-3.png" alt="menu" />
             <span class="menu-category">PIZZA</span>
-            <h3>6 Mini Pizzas</h3>
-            <div class="price">$104.99 <span>$129.99</span></div>
+            <h3>2 Mixed Pizzas</h3>
+            <div class="price">$404.99 <span>$529.99</span></div>
           </div>
           <box class="box-bottom">
             <a href="" class="btn">Add To Cart</a>
@@ -95,13 +96,82 @@
         <div class="box">
           <div class="box-head">
             <img src="images/menu-4.png" alt="menu" />
-            <span class="menu-category">PIZZA</span>
-            <h3>6 Mini Pizzas</h3>
-            <div class="price">$104.99 <span>$129.99</span></div>
+            <span class="menu-category">Burger</span>
+            <h3>3 Meatball Burgers</h3>
+            <div class="price">$504.99 <span>$629.99</span></div>
           </div>
           <box class="box-bottom">
             <a href="" class="btn">Add To Cart</a>
           </box>
+        </div>
+      </div>
+    </section>
+
+    <!-- Product -->
+    <section class="products">
+      <h1 class="heading">Our <span>Products</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <div class="box-head">
+            <span class="title">Mini Burger</span>
+            <a href="" class="name">Bacon Burger</a>
+          </div>
+          <div class="image">
+            <img src="images/product-1.png" alt="" />
+          </div>
+          <div class="box-bottom">
+            <div class="info">
+              <b class="price">$24.00</b>
+              <span class="amount">110gr/300 Cal</span>
+            </div>
+            <div class="product-btn">
+              <a href="#">
+                <i class="fas fa-plus"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="box-head">
+            <span class="title">Mini Burger</span>
+            <a href="" class="name">Bacon Burger</a>
+          </div>
+          <div class="image">
+            <img src="images/product-2.png" alt="" />
+          </div>
+          <div class="box-bottom">
+            <div class="info">
+              <b class="price">$24.00</b>
+              <span class="amount">110gr/300 Cal</span>
+            </div>
+            <div class="product-btn">
+              <a href="#">
+                <i class="fas fa-plus"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="box dark-bg">
+          <div class="box-head">
+            <span class="title">Mini Burger</span>
+            <a href="" class="name">Bacon Burger</a>
+          </div>
+          <div class="image">
+            <img src="images/dark-product.jpg" alt="" />
+          </div>
+          <div class="box-bottom">
+            <div class="info">
+              <b class="price">$24.00</b>
+              <span class="amount">110gr/300 Cal</span>
+            </div>
+            <div class="product-btn">
+              <a href="#">
+                <i class="fas fa-plus"></i>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
