Gerekli iŞlemler Yapıldı

--- a/Ornet.html
+++ b/Ornet.html
@@ -36,7 +36,7 @@
         <button>
           <i class="fas fa-shopping-cart"></i>
         </button>
-        <button>
+        <button id="menu-btn">
           <i class="fas fa-bars"></i>
         </button>
       </div>
@@ -113,7 +113,7 @@
       <div class="box-container">
         <div class="box">
           <div class="box-head">
-            <span class="title">Mini Burger</span>
+            <span class="title">MINI BURGER</span>
             <a href="" class="name">Bacon Burger</a>
           </div>
           <div class="image">
@@ -134,8 +134,8 @@
 
         <div class="box">
           <div class="box-head">
-            <span class="title">Mini Burger</span>
-            <a href="" class="name">Bacon Burger</a>
+            <span class="title">DARK BURGER</span>
+            <a href="" class="name">Dark+Cheese Burger</a>
           </div>
           <div class="image">
             <img src="images/product-2.png" alt="" />
@@ -155,8 +155,9 @@
 
         <div class="box dark-bg">
           <div class="box-head">
-            <span class="title">Mini Burger</span>
-            <a href="" class="name">Bacon Burger</a>
+            <span class="title">DOUBLE DARK BURGER</span>
+            <a href="" class="name">Dark+Cheese+Dou </a>
+            <a href="" class="name"> Ble Burger</a>
           </div>
           <div class="image">
             <img src="images/dark-product.jpg" alt="" />
@@ -175,5 +176,225 @@
         </div>
       </div>
     </section>
+
+    <!-- about -->
+
+    <section class="about">
+      <h1 class="heading">About <span>Us</span></h1>
+      <div class="row">
+        <div class="image">
+          <img src="images/about.jpg" alt="about" />
+        </div>
+        <div class="content">
+          <h3>What Is The Secret Recipe Of Our Burgers?</h3>
+          <p>
+            a flat round cake of minced beef, fried or grilled and typically
+            served in a bread roll garnished with various condiments; a burger
+            Examples Steaks, hamburgers, hot dogs and pork chops are usually
+            grilled.North American What this basically means is that they serve
+            hamburgers, tuna sandwiches, chicken wings and hot dogs in addition
+            to the jerks, rotis and curries.Canadian
+          </p>
+          <a href="#" class="btn">learn more</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- review -->
+
+    <section class="review">
+      <h1 class="heading">customer's <span>review</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <img src="images/quote.png" alt="quate" />
+          <p>
+            his is the reason I quit show choir and kept doing swim. I realized
+            that swim was worth it and show choir was not. This is so powerful!
+            Once you realize this, it changes everything! J June when you choose
+            a hard relationship, make sure that they are choosing it too. there
+            are two people in a relationship.
+          </p>
+          <img src="images/avatar-1.png" alt="avatar" class="user" />
+          <h3>Mehmet Sidar</h3>
+          <div class="starts">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+
+        <div class="box">
+          <img src="images/quote.png" alt="quate" />
+          <p>
+            his is the reason I quit show choir and kept doing swim. I realized
+            that swim was worth it and show choir was not. This is so powerful!
+            Once you realize this, it changes everything! J June when you choose
+            a hard relationship, make sure that they are choosing it too. there
+            are two people in a relationship.
+          </p>
+          <img src="images/avatar-2.png" alt="avatar" class="user" />
+          <h3>Mehmet Sidar</h3>
+          <div class="starts">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+
+        <div class="box">
+          <img src="images/quote.png" alt="quate" />
+          <p>
+            his is the reason I quit show choir and kept doing swim. I realized
+            that swim was worth it and show choir was not. This is so powerful!
+            Once you realize this, it changes everything! J June when you choose
+            a hard relationship, make sure that they are choosing it too. there
+            are two people in a relationship.
+          </p>
+          <img src="images/avatar-3.png" alt="avatar" class="user" />
+          <h3>Mehmet Sidar</h3>
+          <div class="starts">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star-half-alt"></i>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- contact -->
+
+    <section class="contact">
+      <h1 class="heading">contanct <span>us</span></h1>
+      <div class="row">
+        <iframe
+          class="map"
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3008.3542573280783!2d28.973035576483063!3d41.06124841616097!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14cab72298f9cf4b%3A0x6e1ac03762b116c9!2zSC4gRWRpcCBBZMSxdmFyLCBTYXLEsSDDh2nDp2VrIFNva2HEn8SxIE5vOjgsIDM0MzgyIMWeacWfbGkvxLBzdGFuYnVs!5e0!3m2!1str!2str!4v1716203510887!5m2!1str!2str"
+          loading="lazy"
+          referrerpolicy="no-referrer-when-downgrade"
+        ></iframe>
+        <form action="">
+          <h3>get in touch</h3>
+          <div class="inputBox">
+            <i class="fas fa-user"></i>
+            <input type="text" placeholder="name" />
+          </div>
+
+          <div class="inputBox">
+            <i class="fas fa-envelope"></i>
+            <input type="email" placeholder="name" />
+          </div>
+
+          <div class="inputBox">
+            <i class="fas fa-phone"></i>
+            <input type="number" placeholder="name" />
+          </div>
+          <input type="submit" class="btn" value="contact now " />
+        </form>
+      </div>
+    </section>
+
+    <!-- blog -->
+
+    <section class="blog">
+      <h1 class="heading">our <span>blog</span></h1>
+      <div class="box-container">
+        <div class="box">
+          <div class="images">
+            <img src="images/blog-1.jpg" alt="blog" />
+          </div>
+          <div class="content">
+            <a href="#" class="title">how to make burgers?</a>
+            <span>by admin/10st may , 2020</span>
+            <p>
+              Sometimes we find the remains of plants and animals which lived
+              millions of years ago and have since turned to stone. These
+              remains are called fossils. When the animal died, long, long ago,
+              by drowning, for instance, its body sank to the bottom of the
+              water and gradually layers of sand or silt were deposited over it.
+              Over a period of thousands of years, the silt turned to stone and
+              so did the r
+            </p>
+            <a href="#" class="btn">read more</a>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="images">
+            <img src="images/blog-2.jpg" alt="blog" />
+          </div>
+          <div class="content">
+            <a href="#" class="title">how to make burgers?</a>
+            <span>by admin/10st may , 2020</span>
+            <p>
+              Sometimes we find the remains of plants and animals which lived
+              millions of years ago and have since turned to stone. These
+              remains are called fossils. When the animal died, long, long ago,
+              by drowning, for instance, its body sank to the bottom of the
+              water and gradually layers of sand or silt were deposited over it.
+              Over a period of thousands of years, the silt turned to stone and
+              so did the r
+            </p>
+            <a href="#" class="btn">read more</a>
+          </div>
+        </div>
+
+        <div class="box">
+          <div class="images">
+            <img src="images/blog-3.jpg" alt="blog" />
+          </div>
+          <div class="content">
+            <a href="#" class="title">how to make burgers?</a>
+            <span>by admin/10st may , 2020</span>
+            <p>
+              Sometimes we find the remains of plants and animals which lived
+              millions of years ago and have since turned to stone. These
+              remains are called fossils. When the animal died, long, long ago,
+              by drowning, for instance, its body sank to the bottom of the
+              water and gradually layers of sand or silt were deposited over it.
+              Over a period of thousands of years, the silt turned to stone and
+              so did the r
+            </p>
+            <a href="#" class="btn">read more</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- footer -->
+    <section class="footer">
+      <div class="search">
+        <input type="text" class="search-input" placeholder="Search">
+        <button class="btn btn-primary">Search</button>
+      </div>
+      <div class="share">
+        <a href="" class="fab fa-facebook"></a>
+        <a href="" class="fab fa-twitter"></a>
+        <a href="" class="fab fa-instagram"></a>
+        <a href="" class="fab fa-linkedin"></a>
+        <a href="" class="fab fa-pinterest"></a>
+      </div>
+      <div class="links">
+        <a href="#" class="active">Home</a>
+        <a href="#">About</a>
+        <a href="#">Menu</a>
+        <a href="#">Products</a>
+        <a href="#">Review</a>
+        <a href="#">Contact</a>
+        <a href="#">Blogs</a>
+      </div>
+
+      <div class="credit">
+        created by <span>Mehmet Sidar</span> | all rigths reserved
+      </div>
+
+    </section>
   </body>
+
+  <!-- 2.40 da kaldın -->
 </html>
