--- a/Ornet.html
+++ b/Ornet.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style/Ornek.css" />
-    <script src="Ornek.js"></script>
     <!-- foniconlar için aldık internet olmadan çalışmaz -->
     <link
       rel="stylesheet"
@@ -22,23 +21,72 @@
       </a>
       <nav class="navbar">
         <a href="#" class="active">Home</a>
-        <a href="#">About</a>
-        <a href="#">Menu</a>
-        <a href="#">Products</a>
-        <a href="#">Review</a>
-        <a href="#">Contacts</a>
-        <a href="#">Blogs</a>
+        <a href="#about">About</a>
+        <a href="#menu">Menu</a>
+        <a href="#products">Products</a>
+        <a href="#review">Review</a>
+        <a href="#contacts">Contacts</a>
+        <a href="#blogs">Blogs</a>
       </nav>
       <div class="buttons">
-        <button>
+        <button id="search-btn">
           <i class="fas fa-search"></i>
         </button>
-        <button>
+        <button id="cart-btn">
           <i class="fas fa-shopping-cart"></i>
         </button>
         <button id="menu-btn">
           <i class="fas fa-bars"></i>
         </button>
+      </div>
+      <div class="search-form  ">
+        <input
+          type="text"
+          id="searc-box"
+          class="search-input"
+          placeholder="search here"
+        />
+        <i class="fas fa-search"></i>
+      </div>
+      <div class="cart-items-container ">
+        <div class="cart-item">
+         <i class="fas fa-times"></i>
+         <img src="images/menu-1.png" alt="menu">
+         <div class="content">
+          <h3>cart item 01</h3>
+          <div class="price">$15.99</div>
+         </div>
+        </div>
+
+        <div class="cart-item">
+          <i class="fas fa-times"></i>
+          <img src="images/menu-2.png" alt="menu">
+          <div class="content">
+           <h3>cart item 02</h3>
+           <div class="price">$15.99</div>
+          </div>
+         </div>
+
+         <div class="cart-item">
+          <i class="fas fa-times"></i>
+          <img src="images/menu-3.png" alt="menu">
+          <div class="content">
+           <h3>cart item 03</h3>
+           <div class="price">$15.99</div>
+          </div>
+         </div>
+
+         <div class="cart-item">
+          <i class="fas fa-times"></i>
+          <img src="images/menu-4.png" alt="menu">
+          <div class="content">
+           <h3>cart item 04</h3>
+           <div class="price">$15.99</div>
+          </div>
+         </div>
+
+      
+        <a href="#" class="btn">checkout now</a>
       </div>
     </header>
     <section class="home">
@@ -54,7 +102,7 @@
       </div>
     </section>
 
-    <section class="menu">
+    <section class="menu" id="menu">
       <h1 class="heading">Our <span>Menu</span></h1>
       <div class="box-container">
         <div class="box">
@@ -108,7 +156,7 @@
     </section>
 
     <!-- Product -->
-    <section class="products">
+    <section class="products" id="products">
       <h1 class="heading">Our <span>Products</span></h1>
       <div class="box-container">
         <div class="box">
@@ -179,7 +227,7 @@
 
     <!-- about -->
 
-    <section class="about">
+    <section class="about" id="about">
       <h1 class="heading">About <span>Us</span></h1>
       <div class="row">
         <div class="image">
@@ -202,7 +250,7 @@
 
     <!-- review -->
 
-    <section class="review">
+    <section class="review" id="review">
       <h1 class="heading">customer's <span>review</span></h1>
       <div class="box-container">
         <div class="box">
@@ -269,7 +317,7 @@
 
     <!-- contact -->
 
-    <section class="contact">
+    <section class="contact" id="contacts">
       <h1 class="heading">contanct <span>us</span></h1>
       <div class="row">
         <iframe
@@ -301,7 +349,7 @@
 
     <!-- blog -->
 
-    <section class="blog">
+    <section class="blog" id="blogs">
       <h1 class="heading">our <span>blog</span></h1>
       <div class="box-container">
         <div class="box">
@@ -369,7 +417,7 @@
     <!-- footer -->
     <section class="footer">
       <div class="search">
-        <input type="text" class="search-input" placeholder="Search">
+        <input type="text" class="search-input" placeholder="Search" />
         <button class="btn btn-primary">Search</button>
       </div>
       <div class="share">
@@ -392,9 +440,8 @@
       <div class="credit">
         created by <span>Mehmet Sidar</span> | all rigths reserved
       </div>
-
     </section>
-  </body>
+    <script src="Ornek.js"></script>
 
-  <!-- 2.40 da kaldın -->
+  </body>
 </html>
